Please view this file on the master branch, on branches it may be out of date.

v 1.1.0 (unreleased)
  - added support for Doctrine migrations

v 1.0.0 (unreleased)
  - project created