@@ -2,6 +2,8 @@ Please view this file on the master branch, on branches it may be out of date.
 
 v 1.1.0 (unreleased)
   - added support for Doctrine migrations
+  - added support for Doctrine fixtures in development mode
+  - added support for Capistrano deployment workflow
 
 v 1.0.0 (unreleased)
   - project created
